--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "imdb-movies",
+  "homepage": "https://parsaes85.github.io/imdb-movies-react/",
+  "name": "imdb-movies-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
